v10/docs/ModelsContainerAssignment.md
# ModelsContainerAssignment

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**CertStoreContainerId** | Pointer to **int64** |  | [optional] 
**NewContainerName** | Pointer to **string** |  | [optional] 
**NewContainerType** | Pointer to **int64** |  | [optional] 
**KeystoreIds** | **[]string** |  | 

## Methods

### NewModelsContainerAssignment

`func NewModelsContainerAssignment(keystoreIds []string, ) *ModelsContainerAssignment`

NewModelsContainerAssignment instantiates a new ModelsContainerAssignment object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsContainerAssignmentWithDefaults

`func NewModelsContainerAssignmentWithDefaults() *ModelsContainerAssignment`

NewModelsContainerAssignmentWithDefaults instantiates a new ModelsContainerAssignment object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetCertStoreContainerId

`func (o *ModelsContainerAssignment) GetCertStoreContainerId() int64`

GetCertStoreContainerId returns the CertStoreContainerId field if non-nil, zero value otherwise.

### GetCertStoreContainerIdOk

`func (o *ModelsContainerAssignment) GetCertStoreContainerIdOk() (*int64, bool)`

GetCertStoreContainerIdOk returns a tuple with the CertStoreContainerId field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetCertStoreContainerId

`func (o *ModelsContainerAssignment) SetCertStoreContainerId(v int64)`

SetCertStoreContainerId sets CertStoreContainerId field to given value.

### HasCertStoreContainerId

`func (o *ModelsContainerAssignment) HasCertStoreContainerId() bool`

HasCertStoreContainerId returns a boolean if a field has been set.

### GetNewContainerName

`func (o *ModelsContainerAssignment) GetNewContainerName() string`

GetNewContainerName returns the NewContainerName field if non-nil, zero value otherwise.

### GetNewContainerNameOk

`func (o *ModelsContainerAssignment) GetNewContainerNameOk() (*string, bool)`

GetNewContainerNameOk returns a tuple with the NewContainerName field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetNewContainerName

`func (o *ModelsContainerAssignment) SetNewContainerName(v string)`

SetNewContainerName sets NewContainerName field to given value.

### HasNewContainerName

`func (o *ModelsContainerAssignment) HasNewContainerName() bool`

HasNewContainerName returns a boolean if a field has been set.

### GetNewContainerType

`func (o *ModelsContainerAssignment) GetNewContainerType() int64`

GetNewContainerType returns the NewContainerType field if non-nil, zero value otherwise.

### GetNewContainerTypeOk

`func (o *ModelsContainerAssignment) GetNewContainerTypeOk() (*int64, bool)`

GetNewContainerTypeOk returns a tuple with the NewContainerType field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetNewContainerType

`func (o *ModelsContainerAssignment) SetNewContainerType(v int64)`

SetNewContainerType sets NewContainerType field to given value.

### HasNewContainerType

`func (o *ModelsContainerAssignment) HasNewContainerType() bool`

HasNewContainerType returns a boolean if a field has been set.

### GetKeystoreIds

`func (o *ModelsContainerAssignment) GetKeystoreIds() []string`

GetKeystoreIds returns the KeystoreIds field if non-nil, zero value otherwise.

### GetKeystoreIdsOk

`func (o *ModelsContainerAssignment) GetKeystoreIdsOk() (*[]string, bool)`

GetKeystoreIdsOk returns a tuple with the KeystoreIds field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetKeystoreIds

`func (o *ModelsContainerAssignment) SetKeystoreIds(v []string)`

SetKeystoreIds sets KeystoreIds field to given value.



[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


